# YX_AI

./: .gitignore  AGENTS.md  start.bat  start.sh  stop.bat  启动说明.md
backend/: check_tasks.py  config.yaml  poll_task.py  pyproject.toml
backend/app/: __init__.py  db.py  main.py
backend/app/api/: __init__.py  assets.py  characters.py  episodes.py  generate.py  image_hosting.py  logs.py  perf.py  projects.py  prompt_templates.py  props.py  providers.py  scenes.py  script.py  settings.py  shot_references.py  shots.py  style_presets.py  tasks.py  workflows.py
backend/app/clients/: agnes_client.py
backend/app/core/: __init__.py  config.py  serialization.py  trace.py
backend/app/models/: __init__.py  asset.py  base.py  character.py  episode.py  image_hosting.py  perf.py  project.py  prompt_template.py  prop.py  provider.py  scene.py  script.py  shot.py  shot_reference.py  style_preset.py  task.py  task_log.py  workflow.py
backend/app/pipelines/: __init__.py  _extraction_stages.py  _llm_utils.py  _orchestrator.py  script_parser.py
backend/app/providers/: __init__.py  agnes_handler.py  base.py  registry.py
backend/app/schemas/: __init__.py  business.py  common.py  generation.py  perf.py  project.py  prompt_template.py  provider_types.py  script.py  style_preset.py
backend/app/services/: asset_service.py  backup_service.py  business_service.py  config_service.py  generation_service.py  image_hosting_migrate.py  image_hosting_service.py  perf_service.py  (+7 more)
backend/scripts/: test_shot_parsing_e2e.py
backend/tests/: conftest.py  factories.py  pytest.ini
(+239 files in other folders)
