[project]
name = "ai-drama-studio-backend"
version = "0.1.0"
description = "AI Drama Studio - Backend (FastAPI)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.27.0",
    "huey>=2.5.0",
    "python-multipart>=0.0.9",
    "pillow>=10.2.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.1",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "black>=24.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.black]
line-length = 100
target-version = ["py311"]
